force-app/main/default/objects/IA_Seating_Room_Allotment__c/IA_Seating_Room_Allotment__c.object-meta.xml
<CustomObject>
    <label>IA Seating Room Allotment</label>
    <nameField>
        <label>IA Seating Room Allotment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IA Seating Room Allotments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>