force-app/main/default/objects/IA_Seating_Room_Allotment__c/fields/Alloted_Students__c.field-meta.xml
<CustomField>
    <fullName>Alloted_Students__c</fullName>
    <label>Alloted Students</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>