force-app/main/default/objects/IA_Seating_Room_Allotment__c/fields/Assigned_Program_Batches__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Program_Batches__c</fullName>
    <inlineHelpText>This field contain all the assigned program batches to the room</inlineHelpText>
    <label>Assigned Program Batches</label>
    <length>255</length>
    <type>Text</type>
</CustomField>