force-app/main/default/objects/IA_Seating_Room_Allotment__c/fields/Capacity_Needed__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Needed__c</fullName>
    <label>Capacity Needed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>