force-app/main/default/objects/IA_Seating_Room_Allotment__c/fields/Exam_Name__c.field-meta.xml
<CustomField>
    <fullName>Exam_Name__c</fullName>
    <label>Exam Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>