force-app/main/default/objects/IA_Seating_Room_Allotment__c/fields/Exam_Time__c.field-meta.xml
<CustomField>
    <fullName>Exam_Time__c</fullName>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>