force-app/main/default/objects/IA_Seating_Room_Allotment__c/fields/Facility_Type__c.field-meta.xml
<CustomField>
    <fullName>Facility_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility Type</label>
    <referenceTo>hed__Facility__c</referenceTo>
    <relationshipLabel>IA Seating Room Allotments</relationshipLabel>
    <relationshipName>IA_Seating_Room_Allotments</relationshipName>
    <type>Lookup</type>
</CustomField>