force-app/main/default/objects/IA_Seating_Room_Allotment__c/fields/InEligible_SRN__c.field-meta.xml
<CustomField>
    <fullName>InEligible_SRN__c</fullName>
    <label>InEligible SRN</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>