force-app/main/default/objects/IA_Seating_Room_Allotment__c/fields/Miscellaneous_SRN_Number__c.field-meta.xml
<CustomField>
    <fullName>Miscellaneous_SRN_Number__c</fullName>
    <label>Miscellaneous SRN Number</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>