force-app/main/default/objects/IA_Seating_Room_Allotment__c/fields/Program_Batch__c.field-meta.xml
<CustomField>
    <fullName>Program_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Batch</label>
    <referenceTo>hed__Program_Plan__c</referenceTo>
    <relationshipLabel>IA Seating Room Allotments</relationshipLabel>
    <relationshipName>IA_Seating_Room_Allotments</relationshipName>
    <type>Lookup</type>
</CustomField>