force-app/main/default/objects/IA_Seating_Room_Allotment__c/fields/rve_Date_of_Exam__c.field-meta.xml
<CustomField>
    <fullName>rve_Date_of_Exam__c</fullName>
    <label>Date of Exam</label>
    <type>Date</type>
</CustomField>