force-app/main/default/objects/IA_Seating_Room_Allotment__c/fields/rveShift__c.field-meta.xml
<CustomField>
    <fullName>rveShift__c</fullName>
    <label>Shift</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Morning</fullName>
            </value>
            <value>
                <fullName>Afternoon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>