force-app/main/default/objects/IA_Seating_Room_Allotment__c/fields/School__c.field-meta.xml
<CustomField>
    <fullName>School__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>School</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>IA Seating Room Allotments</relationshipLabel>
    <relationshipName>IA_Seating_Room_Allotments</relationshipName>
    <type>Lookup</type>
</CustomField>