force-app/main/default/objects/IA_Seating_Room_Allotment__c/fields/SRN_End_Number__c.field-meta.xml
<CustomField>
    <fullName>SRN_End_Number__c</fullName>
    <label>SRN End Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>