force-app/main/default/objects/IA_Seating_Room_Allotment__c/fields/Total_Students__c.field-meta.xml
<CustomField>
    <fullName>Total_Students__c</fullName>
    <label>Total Students</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>